added test part in frontend

--- a/frontend/src/app/report/front/front.component.html
+++ b/frontend/src/app/report/front/front.component.html
@@ -55,7 +55,7 @@
                   
                   <select formControlName="tests" class="form-control" [(ngModel)]="selectedtest">
                     <option>Select test...</option>
-                    <option *ngFor="let test of tests" [value]="test">{{test}}</option>
+                    <option *ngFor="let test of tests" [value]="test.testName">{{test.testName}}</option>
                   </select>
                 </div>
                  <div class="col-sm-3">
