search dropdown added

--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -52,6 +52,7 @@
                       <!--                 <li><a  routerLink="/view">Timesheets</a></li>
                        -->                <li><a *ngIf="admin || trainer " routerLink="/score"> Display Details</a></li>
                                       <li><a *ngIf="admin || trainer" routerLink="/score/newDetails">Add Details</a></li>
+                                      <li><a *ngIf="admin || trainer" routerLink="/score/newDetails">Search Employee</a></li>
                                       
                                   </div>
                 
