--- a/frontend/src/app/report/student-details/student-details.component.html
+++ b/frontend/src/app/report/student-details/student-details.component.html
@@ -1,5 +1,7 @@
+<p *ngIf="true">ghghh</p>
 
- <head>
+<div *ngIf="false">
+ <head >
         <title>Bootstrap Example</title>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -102,4 +104,4 @@
         </tbody>
         
     </table>  -->
-    
+</div>  
