search box sample

--- a/frontend/src/app/report/student-details/student-details.component.html
+++ b/frontend/src/app/report/student-details/student-details.component.html
@@ -1,6 +1,22 @@
-<p *ngIf="true">ghghh</p>
+<div *ngIf="true"> Search page to be added here
 
-<div *ngIf="false">
+
+
+
+        <input type="text" id="searchByName" [(ngModel)]="nameSearch" name="searchByName" placeholder="Search By Employee Name">
+        <span class="spanclass">  </span>
+       <button type="button" class="btn btn-default" (click)="onSearch()" > 
+           <span class="glyphicon glyphicon-search"></span> Search
+         </button>
+         
+
+
+
+
+
+</div>
+
+<div *ngIf="true">
  <head >
         <title>Bootstrap Example</title>
         <meta charset="utf-8">
