--- a/frontend/src/app/report/student-details/student-details.component.html
+++ b/frontend/src/app/report/student-details/student-details.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="true"> Search page to be added here
+<div *ngIf="!istable"> Search page to be added here
 
 
 
@@ -16,7 +16,7 @@
 
 </div>
 
-<div *ngIf="true">
+<div *ngIf="istable">
  <head >
         <title>Bootstrap Example</title>
         <meta charset="utf-8">
