--- a/frontend/src/app/report/student-details/student-details.component.css
+++ b/frontend/src/app/report/student-details/student-details.component.css
@@ -20,3 +20,48 @@ input {
 
     
 }
+#Search {
+  .panel {
+      margin-top: 30px;
+  }
+  .panel-heading {
+      text-align: center;
+  }
+  h3, h4 {
+      text-align: center;
+  }
+  input:active {
+      border: 1px solid indianred;
+  }
+  .login-btn {
+      width: 100%;
+      border: 1px solid darkblue;   
+  }
+  .fa-facebook-square {
+      font-size: 20px;
+      color: darkblue;
+  }
+  .login-btn-fa {
+      width: 100%;
+      border: 1px solid darkblue; 
+  }
+  .fa-google-plus-square {
+      font-size: 20px;
+      color: indianred;
+  }
+  .space-top-10 {
+      margin-top: 10px;
+  }
+  .space-top-20 {
+      margin-top: 20px;
+  }
+}
+#searchByName, #searchById {
+  width: 18%;
+  padding: 6px 6px;
+  margin: 5px 3px;
+  box-sizing:border-box;
+  
+  border-radius: 5px; 
+  border: 1px solid #cac8c8;
+}
