--- a/frontend/src/app/report/student-details/student-details.component.html
+++ b/frontend/src/app/report/student-details/student-details.component.html
@@ -1,14 +1,6 @@
-<div *ngIf="!istable"> Search page to be added here
+<div *ngIf="!istable"> 
 
 
-
-
-        <input type="text" id="searchByName" [(ngModel)]="nameSearch" name="searchByName" placeholder="Search By Employee Name">
-        <span class="spanclass">  </span>
-       <button type="button" class="btn btn-default" (click)="onSearch()" > 
-           <span class="glyphicon glyphicon-search"></span> Search
-         </button>
-         
 
        <div class="row" id="Search">
         
