grad input form some changes

--- a/frontend/src/app/gradManagement/confirmation-dialog/confirmation-dialog.component.html
+++ b/frontend/src/app/gradManagement/confirmation-dialog/confirmation-dialog.component.html
@@ -1,4 +1,4 @@
-<div dir="auto">
+<div mat-dialog style="position:fixed;left:40%;right: 40%;top:50%;bottom: 50%;">
   <div mat-dialog-head>
     <button type="button" class="close" data-dismiss="modal" aria-label="Close" (click)="onNoClick()">
       <span aria-hidden="true">&times;</span>
