--- a/frontend/src/app/report/front/front.component.html
+++ b/frontend/src/app/report/front/front.component.html
@@ -57,7 +57,7 @@
                   </select>
                 </div>
                  <div class="col-sm-3">
-                    <button type="button" class="button" (click)="myfunc()" >Search</button>     
+                    <button type="button" class="button" (click)="retrieveTable()" >Search</button>     
                 </div>
                 
               </div>
@@ -66,7 +66,7 @@
             </div>
           </form>
           <div class="tableFixHead panel-body" width=vw; height=vh;>
-              <div *ngIf="report?.length;else no_data_templ">
+              <div >
 
                   
             <table class="table table-striped table-bordered">
@@ -94,7 +94,7 @@
                      No daata found...
                 </ng-template> -->
 
-                <tbody>
+                <tbody *ngIf="report?.length">
                  
                   <tr *ngFor="let product of report; let i=index" [attr.data-index]="i">
                           
@@ -117,7 +117,7 @@
                 </tbody>
             </table>
           </div>
-          <ng-template #no_data_templ>
+          <ng-template *ngIf="noData">
               No data found...
           </ng-template>
         </div>
