--- a/frontend/src/app/report/front/front.component.html
+++ b/frontend/src/app/report/front/front.component.html
@@ -117,9 +117,9 @@
                 </tbody>
             </table>
           </div>
-          <ng-template *ngIf="noData">
+          <div *ngIf="noData">
               No data found...
-          </ng-template>
+          </div>
         </div>
         </body>
             
