add details design complate

--- a/frontend/src/app/report/new-details/new-details.component.html
+++ b/frontend/src/app/report/new-details/new-details.component.html
@@ -72,7 +72,7 @@
                      [(ngModel)]="details.score" name="scorename"  required />
                 </div>
               </div>
-            <button class="btn btn-primary login-btn" align="right">Submit</button><br/>
+            <button class="btn btn-primary login-btn col-sm-3 col-md-offset-5" align="right">Submit</button><br/>
             <div class="alert alert-info" role="alert"  *ngIf="submitted">
                 Submitted
             </div>
