--- a/frontend/src/app/gradManagement/gradmanagement/grad-details/grad-details.component.scss
+++ b/frontend/src/app/gradManagement/gradmanagement/grad-details/grad-details.component.scss
@@ -1,12 +1,14 @@
 //  body{
 //     background: -webkit-linear-gradient(left, #3931af, #00c6ff);
 // } 
-.emp-profile{
+.grad-profile{
     padding: 1%;
     margin-top: 1%;
     margin-bottom: 3%;
-    border-radius: 0.5rem;
+    border-radius: 5.0rem;
     background: #fff;
+    border: rgb(231, 228, 228) solid;
+    border-width: 0.4px;
 }
 .profile-img{
     text-align: center;
