--- a/frontend/src/app/report/front/front.component.html
+++ b/frontend/src/app/report/front/front.component.html
@@ -10,62 +10,57 @@
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
-      </head>
-      <body>
+</head>
+  <body>
         <!-- <div class="panel panel-default"> -->
-            <div class="panel-heading">
-                <h2>Assessment Management</h2>
-            </div>
+    <div class="panel-heading">
+        <h3>Assessment Management</h3>
+    </div>
       
-<!--             
-            <input type="text" id="searchByName" [(ngModel)]="nameSearch" name="searchByName" placeholder="Search By Employee Name">
-             <span class="spanclass">  </span>
-            <button type="button" class="btn btn-default" (click)="onSearch()" > 
-                <span class="glyphicon glyphicon-search"></span> Search
-              </button>
-               -->
-              <!-- <button type="button" class="btn btn-default"  (click)="sample()" routerLink="newDetails"> 
-                <span class="glyphicon glyphicon-plus"></span>Add Details
-              </button> -->
                
-            <form [formGroup]="createAccountForm">  
-            <div class="container">
-                
-              <div class="row"> 
-                 
+    <form [formGroup]="createAccountForm">  
+      <div class="container">   
+          <div class="row">  
                 <div class="col-sm-3">
-                     
                     <select formControlName="years"  class="form-control" (change)="onChangeYear($event.target.value)" [(ngModel)]="selectedyear">
                       <option>Select year...</option>
                       <!-- <option *ngFor="let year of years" [value]="year.name">{{year.name}}</option> -->
                       <option *ngFor="let year of years" [value]="year">{{year}}</option>
                     </select> 
                 </div>
+
                 <div class="col-sm-3">
-                  
                   <select formControlName="batches" class="form-control" (change)="onChangeBatch($event.target.value)" [(ngModel)]="selectedbatch">
                     <option >Select batch...</option>
                     <option *ngFor="let batchinfo of batches" [value]="batchinfo">{{batchinfo}}</option>
                   </select>
-               
                 </div>
+
                 <div class="col-sm-3">
-                  
                   <select formControlName="tests" class="form-control" [(ngModel)]="selectedtest">
                     <option>Select test...</option>
                     <option *ngFor="let test of tests" [value]="test.testName">{{test.testName}}</option>
                   </select>
                 </div>
-                 <div class="col-sm-3">
+
+                <div class="col-sm-3">
                     <button type="button" class="button" (click)="retrieveTable()" >Search</button>     
                 </div>
-                
-              </div>
+          </div>
+       </div>
+       <p>   </p>
+    </form>
+
+    <div>  
+          <ag-grid-angular style="width: 100%; height: 500px" 
+                class="ag-theme-balham"
+                [rowData]="rowData" 
+                [columnDefs]="columnDefs"
+          >
             
-            
-            </div>
-          </form>
-          <div class="tableFixHead panel-body" width=vw; height=vh;>
+          </ag-grid-angular>
+    </div>  
+          <!-- <div class="tableFixHead panel-body" width=vw; height=vh;>
               <div >
 
                   
@@ -78,7 +73,7 @@
                       <th>Success %</th>
                        <th>Rank</th> 
                     </tr>
-                </thead>
+                </thead> -->
                 <!-- <div *ngIf="Games?.length;else no_data_templ">
                     <table>
                         <tbody>
@@ -94,17 +89,17 @@
                      No daata found...
                 </ng-template> -->
 
-                <tbody *ngIf="report?.length">
+                <!-- <tbody *ngIf="report?.length">
                  
                   <tr *ngFor="let product of report; let i=index" [attr.data-index]="i">
                           
                     <a routerLink="detail/{{product.gradEmployee.employeeId}}"> <td>{{product.gradEmployee.employeeName}}</td> </a>
-                    <td>{{product.score}}</td>
+                    <td>{{product.score}}</td> -->
                    
                     <!-- <td>{{  ( (((i+1)*25)-1)/99 )*100      }}</td> -->
-                    <td>{{product.successPercentage}}</td>
+                    <!-- <td>{{product.successPercentage}}</td>
                     <td>{{product.gradRank}}</td>
-              
+               -->
                     <!-- <a routerLink="/detail/{{product.gradEmployee.employeeId}}"> <td>{{product.gradEmployee.employeeId}}</td> </a>
                     <td>{{product.gradEmployee.employeeName}}</td> 
                     <td>{{product.score}}</td> -->
@@ -113,14 +108,12 @@
                      <td>{{product.incorrect}}</td> -->
                      
                     
-                </tr>
+                <!-- </tr>
                 </tbody>
-            </table>
-          </div>
+            </table> -->
           <div *ngIf="noData">
               No data found...
           </div>
-        </div>
         </body>
             
                   <!-- <table *ngIf="report">
