--- a/frontend/src/app/report/student-details/student-details.component.html
+++ b/frontend/src/app/report/student-details/student-details.component.html
@@ -43,16 +43,28 @@
                       </tbody>
                     </table>
              </div>
-         
-             <div>  
-                    <ag-grid-angular style="width: 100%; height: 500px" 
-                          class="ag-theme-balham"
-                          [rowData]="rowData" 
-                          [columnDefs]="columnDefs"
-                    >
-                      
-                    </ag-grid-angular>
-             </div>  
+             <div class="row" id="login">
+        
+                 <div class="col-md-8 col-md-offset-2">
+                   <div class="panel panel-default">
+                     <div class="panel-heading">Employee details</div>
+                      <div class="panel-body">
+                          <div>  
+                            <ag-grid-angular style="width: 100%; height:500px" 
+                                  class="ag-theme-balham"
+                                  [rowData]="rowData" 
+                                  [columnDefs]="columnDefs"
+                            >  
+                            </ag-grid-angular>
+                        </div>  
+                      <div class="space-top-20"></div>
+                     </div>
+                   </div>
+                 </div>
+                 <button type="button" class="btn btn-primary login-btn" (click)="onBack()" > 
+                  Back
+                 </button>
+             
         <!-- <div class="tableFixHead panel-body" width=vw; height=vh;> -->
     
             <!-- <table class="table table-striped table-bordered">
